src/test/ui/type-alias-impl-trait/issue-53598.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-53598.rs:4:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-53598.rs:23:42
   |
LL |       fn foo<T: Debug>(_: T) -> Self::Item {
   |  __________________________________________^
LL | |
LL | |         S::<T>(Default::default())
LL | |     }
   | |_____^

error: aborting due to previous error; 1 warning emitted

